--- a/.github/workflows/automatically-generate.yml
+++ b/.github/workflows/automatically-generate.yml
@@ -1,14 +1,13 @@
 name: automatically-generate
 
 on:
-  workflow_dispatch:
-
+  schedule:
+    - cron: '0 6 * * *'
+    
 permissions:
   contents: write
 
-# on:
-  # schedule:
-    # - cron: '0 3 * * *'
+
     
 jobs:
   run_program:
