--- a/.github/workflows/automatically-generate.yml
+++ b/.github/workflows/automatically-generate.yml
@@ -16,23 +16,28 @@ jobs:
     steps:
       - name: Pull sing-box-rule-set
         uses: actions/checkout@main
+        
 
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
           go-version: '1.22.10'
+          
 
       - name: Pull ios_rule_script
         uses: actions/checkout@master
         with:
           repository: blackmatrix7/ios_rule_script  
           path: ios_rule_script  
+          
 
-      - name: run
+      - name: Generate
         run: |
           go install github.com/W0n9CNer/yaml2srs/cmd/yaml2srs@latest
           yaml2srs folder -p ios_rule_script/rule/Clash -o rule
-      - name: push sing-box-rule-set
+
+          
+      - name: Push sing-box-rule-set
         run: |
           git config --global user.name "W0n9CNer"
           git config --global user.email "wongcner@icloud.com"
